--- a/frontend/src/assets/styles/scss/pages/_flashcards.scss
+++ b/frontend/src/assets/styles/scss/pages/_flashcards.scss
@@ -89,7 +89,7 @@
 }
 
 .start-quiz-btn button {
-  background-color: #28a745;
+  background-color: #2ec351;
   color: white;
   padding: 15px 30px;
   font-size: 18px;
